 * #8684: Unexpected keyword argument 'tags_link'
 * #8995: Some missing HTML on wiki edit page
 * #9023: Remove superflous error message about wiki_namespace
 * #9059: Various fixes and enhancements (detailed in #9060 - #9064)
 * #9060: Query results are duplicated when realm-selection is repeated
 * #9062: Wiki-page level-1-title broken on 0.12
 * TagsQuery now supports a context object
 * refactor cloud rendering so it can be used by other plugins
 * fix regression related to missing IWikiChangeListener
 * ensure tags stylesheet is added for macros 
 * log warning for tag providers that don't implement describe_tagged_resource
 * add plugin author email to display something at Trac 0.11 plugin admin page
 * fix an AttributeError specific to the 0.6 release since [2953]

 new features
 * #2509: Create wiki page from /tags/<tag> page
 * #2708: Add rel-tag microformat to tags list
 * #3610: ListTagged macro should have distinct formatting of closed tickets
 * #3754: Tag redirects to existing wiki page instead of listing tagged pages
 * #3851: TAGS_VIEW not showing page tags along for anonymous
 * #4799: TagCloud should optionally be case-insensitive
   by adding a new option `cloud_caseless_sort`
 * #7787: Add i18n support
 * #8638: Should implement wiki_page_renamed of IWikiChangeListener interface
 * #9058: Let `TAGS_MODIFY` inherited `TAGS_VIEW` for intuitive permissions
 * #9061: Mass tag replacement functionality
 * #9063: Allow excluding realms from queries by default
 * #9064: More rendering options for ListTagged macro and tag-handler
 * #9194: Add unittest and functional test infrastructure
 * render_cloud() now passes a percent to renderers instead of font pixel size
 * add `ignore_closed_tickets` option: skip closed tickets when collecting tags
 * remove redundant JavaScript files
 * move generic code from TagCloud into new TagSystem.get_all_tags() method
 * widened Wiki tag input field slightly
 * prepare translatable macro documentation